--- a/elastic/examples/ex_numpy_all.ipynb
+++ b/elastic/examples/ex_numpy_all.ipynb
@@ -48,28 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "140\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indices = np.random.permutation(len(iris_X))\n",
     "iris_X_train = iris_X[indices[:-10]]\n",
     "iris_y_train = iris_y[indices[:-10]]\n",
     "iris_X_test = iris_X[indices[-10:]]\n",
-    "iris_y_test = iris_y[indices[-10:]]\n",
-    "print(len(iris_X_train))"
+    "iris_y_test = iris_y[indices[-10:]]"
    ]
   },
   {
@@ -155,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
