--- a/elastic/examples/ex_pandas_all.ipynb
+++ b/elastic/examples/ex_pandas_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4397003600\n"
+      "140342093959312\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -56,8 +56,8 @@
       "RangeIndex: 2430 entries, 0 to 2429\n",
       "Columns: 161 entries, date to acquisition_info\n",
       "dtypes: float64(5), int64(82), object(74)\n",
-      "memory usage: 11.5 MB\n",
-      "4396082880\n"
+      "memory usage: 12.8 MB\n",
+      "140343039796528\n"
      ]
     }
    ],
@@ -65,6 +65,26 @@
     "gl = gl.fillna(0)\n",
     "gl.info(memory_usage='deep')\n",
     "print(id(gl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2430, 161)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gl.shape"
    ]
   },
   {
@@ -751,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
